maze.shortestpath.ShortestPathMaze.scala.error
Compilation error:
ShortestPathMaze:28: error: value :: is not a member of Unit
    direction=1::direction
               ^